# ValacCourse

./: README.md
Lesson-1/: README.md  test.vala
Lesson-11/: meson.build
Lesson-3/: Window.vala
Lesson-4/: Application.vala  meson.build
Lesson-5/: meson.build
Lesson-6/: meson.build
Lesson-7/: meson.build
Lesson-8/: meson.build
Lesson-9/: meson.build
Lesson-Adv-01/: .gitignore  AdvancedSample.vala  meson.build
Lesson-Adv-02/: .gitignore  meson.build  num_guess.vala
Lesson-Alsa-01/: .gitignore  alsa-sequencer  alsa-sequencer.vala  meson.build  meson.build~
Lesson-Basic-01/: Hello.vala  Hello.vala~  ReadUInput.vala  comand_sample1.vala  math_sample.vala
Lesson-Cairo/CairoShaped/: meson.build
Lesson-Character/: character-sample.vala  meson.build
Lesson-Condicional/: conditional-compilation  conditional-compilation.vala
Lesson-Curses/: cursesdemo
Lesson-DbusClient/: .gitignore  gdbus-demo-client.vala  gdbus-demo-server.vala
Lesson-Egg/: eggclock.vala  meson.build
Lesson-Gio-AsynClient/: gio-network-client-async.vala  meson.build
Lesson-Gio-AsyncServer/: gio-server-async.vala  meson.build
Lesson-Gio-AsyncStreamReading/: gio-async-reading.vala  meson.build
Lesson-Gio-Compression/: gio-compression.vala  meson.build
Lesson-Gio-Enum-Directory-Content/: gio-ls.vala  meson.build
Lesson-Gio-FileOperation/: gio-file-operations.vala  meson.build
Lesson-Gio-ReadingBinayData/: gio-binary-sample.vala  meson.build
Lesson-Gio-ReadingTextFile/: gio-sample.vala  meson.build
Lesson-Gio-Server/: gio-server.vala  meson.build
(+93 files in other folders)
